--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pinteresting</title>
-    <%= csrf_meta_tags %>
 
+
+  <head>
+       <title>Pinteresting</title>
+    <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </div>
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+   	<div class="container"> 
+    	<%= yield %>
+
   </body>
+
 </html>
