final customized bootstrap

--- a/app/assets/stylesheets/bootstrap_and_customize.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customize.css.scss
@@ -11,6 +11,10 @@ $jumbotron-color:       #34495e;
 
 @import 'bootstrap';
 
-.centre {
+.center {
 	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
 }
