--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <div class="jumbotron center" >
   <h2>Welcome to my app!</h2>
-  <p>Please click here <%= link_to "Sign Up" , "#" , class: "btn btn-danger"%></p>
+  <p><%= link_to "Sign up" , "#" , class: "btn btn-danger"%>
+  	<%= link_to "Log in" , "#" , class: "btn btn-default"%>
+  </p>
 </div>
