--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,11 @@
 <div class="jumbotron center" >
   <h1>Welcome to my app!</h1>
-  <p><%= link_to "Sign up" , "#" , class: "btn btn-danger"%>
-  	<%= link_to "Log in" , "#" , class: "btn btn-default"%>
+  <% if user_signed_in? %>
+  <h3>You are in the members area</h3>
+  <% else %>
+  <p>
+  	<%= link_to "Sign up" , new_user_registration_path , class: "btn btn-danger"%>
+  	<%= link_to "Log in" , new_user_session_path  , class: "btn btn-default"%>
   </p>
+  <% end %>
 </div>
