devise style changes

--- a/app/assets/stylesheets/bootstrap_and_customize.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customize.css.scss
@@ -1,12 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Baloo+Bhai:400,700);
+@import url(https://fonts.googleapis.com/css?family=Amatic+SC:400,700);
 
 
-$font-family-sans-serif:           'Baloo Bhai', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$body-bg:              #bdc3c7;
-$navbar-height:        45px;
+$font-family-cursive:           'Amatic SC';
+$body-bg:             			 #34495e;
+$navbar-height:       			 45px;
 
-$navbar-default-brand-color:  #c0392b;
-$jumbotron-color:       #34495e;
+$navbar-default-brand-color:  	#c0392b;
+$jumbotron-color:      			#34495e;
 
 
 @import 'bootstrap';
