--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
-<h2>About Us</h2>
+<div class="jumbotron left" >
+	<h2>About Us</h2>
 
-<p>We are working on the one month rails pinteresting app</p>
+	<p>We are working on the one month rails pinteresting app</p>
+</div>
