--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron left" >
 	<h2>About Us</h2>
 
-	<p>We are working on the one month rails pinteresting app</p>
+	<p>I am working on the one month rails pinteresting app</p>
 </div>
