--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <% else %>
   <p>
   	<%= link_to "Sign up" , new_user_registration_path , class: "btn btn-danger"%>
-  	<%= link_to "Log in" , new_user_session_path  , class: "btn btn-default"%>
+  	<%= link_to "Log in" , new_user_session_path  , class: "btn btn-primary"%>
   </p>
   <% end %>
 </div>
