--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -7,6 +7,7 @@
     <thead>
       <tr>
         <th>Description</th>
+        <th>User's Email</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -15,9 +16,13 @@
       <% @pins.each do |pin| %>
         <tr>
           <td><%= pin.description %></td>
-          <td><%= link_to 'Show', pin %></td>
-          <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-          <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= pin.user.email if pin.user%></td>
+          <td><%= link_to 'Show', pin %>
+            <% if pin.user == current_user %>
+              <%= link_to 'Edit', edit_pin_path(pin) %>
+              <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </td>
+            <% end %>
         </tr>
       <% end %>
     </tbody>
@@ -25,5 +30,8 @@
 
   <br>
 
+<% if user_signed_in? %>
   <%= link_to 'New Pin', new_pin_path %>
+<% end %>
+
 </div>
